--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -14,8 +14,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.ding.activity.MainActivity"
+            android:name="com.ding.activity.TextViewActivity"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.ding.activity.TextViewTestActivity"
+            android:label="@string/title_activity_text_view_test" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
